RESOLVED FIXED110532
tables/mozilla/bugs/bug8950.html fails with threaded parser due to attribute duplication
https://bugs.webkit.org/show_bug.cgi?id=110532
Summary tables/mozilla/bugs/bug8950.html fails with threaded parser due to attribute ...
Eric Seidel (no email)
Reported 2013-02-21 16:56:33 PST
tables/mozilla/bugs/bug8950.html fails with threaded parser due to attribute duplication
Attachments
Patch (2.85 KB, patch)
2013-02-21 16:57 PST, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2013-02-21 16:57:54 PST
Eric Seidel (no email)
Comment 2 2013-02-21 17:06:38 PST
I believe this also fixed fast/css-grid-layout/breadth-size-resolution-grid.html. :) So we're down to 20 failures or fewer at this point.
WebKit Review Bot
Comment 3 2013-02-21 17:29:41 PST
Comment on attachment 189641 [details] Patch Clearing flags on attachment: 189641 Committed r143673: <http://trac.webkit.org/changeset/143673>
WebKit Review Bot
Comment 4 2013-02-21 17:29:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.