tables/mozilla/bugs/bug8950.html fails with threaded parser due to attribute duplication https://bugs.webkit.org/show_bug.cgi?id=110532

Reviewed by Adam Barth.

This is a very basic failure which we should have caught earlier with the html5lib parser
tests, except those use document.write and thus avoid the threaded parser.

AtomicHTMLToken expects its attributes to be unique.  We were not doing that for the
CompactHTMLToken path, and this ancient mozilla table test caught that.

Fixes tables/mozilla/bugs/bug8950.html.

* html/parser/AtomicHTMLToken.h:
(WebCore::AtomicHTMLToken::AtomicHTMLToken):
(WebCore::AtomicHTMLToken::initializeAttributes):


Canonical link: https://commits.webkit.org/128815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143673 268f45cc-cd09-0410-ab3c-d52691b4dbfc